Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Fill statement name with a sequence
* Add manual validation on statement

Version 1.2 - 2014-07-01
* Changelog file creation