@@ -1,1 +1,3 @@
 - **Gestion du bordereau de chèques**
+- **Gestion du tiers payeur**
+    Il est possible d'encaisser un chèque, une CB, un virement... depuis un tiers payeur et d'affecter les fonds sur différents tiers en une seule passe.
