@@ -2,3 +2,4 @@ Ce module personnalise le module ``account_statement`` pour les besoins du
 métier de l'assurance.
 
 - Gestion des bordereaux de chèques
+- Gestion du tiers payeur
