@@ -1,3 +1,7 @@
+from sql.aggregate import Max, Sum
+
+from trytond.transaction import Transaction
+from trytond import backend
 from trytond.pool import PoolMeta, Pool
 from trytond.pyson import Eval, Bool
 
@@ -8,6 +12,7 @@ __metaclass__ = PoolMeta
 __all__ = [
     'Line',
     'Statement',
+    'LineGroup',
     ]
 
 
@@ -15,15 +20,32 @@ class Line:
     'Account Statement Line'
     __name__ = 'account.statement.line'
 
+    party_payer = fields.Many2One('party.party', 'Payer', required=True)
     in_bank_deposit_ticket = fields.Function(
         fields.Boolean('In Bank Deposit Ticket'),
         'on_change_with_in_bank_deposit_ticket')
+
+    @classmethod
+    def __register__(cls, module_name):
+        TableHandler = backend.get('TableHandler')
+        cursor = Transaction().cursor
+
+        the_table = TableHandler(cursor, cls, module_name)
+        # Migration from 1.4: Store party_payer
+        migrate = False
+        if not the_table.column_exist('party_payer'):
+            migrate = True
+        super(Line, cls).__register__(module_name)
+        if migrate:
+            cursor.execute("update account_statement_line "
+                "set party_payer = party")
 
     @classmethod
     def __setup__(cls):
         super(Line, cls).__setup__()
         cls.number.depends += ['in_bank_deposit_ticket']
         cls.number.states['required'] = Bool(Eval('in_bank_deposit_ticket'))
+        cls.party.string = 'Beneficiary'
 
     @fields.depends('statement')
     def on_change_statement(self):
@@ -33,6 +55,11 @@ class Line:
     @fields.depends('statement')
     def on_change_with_in_bank_deposit_ticket(self, name=None):
         return self.statement and self.statement.in_bank_deposit_ticket
+
+    @fields.depends('party_payer', 'amount', 'party', 'invoice')
+    def on_change_party_payer(self):
+        self.party = self.party_payer
+        self.on_change_party()
 
     def get_synthesis_rec_name(self, name):
         return '%s - %s - %s' % (self.statement.journal.rec_name,
@@ -106,3 +133,23 @@ class Statement(export.ExportImportMixin):
     @classmethod
     def validate_manual(cls):
         pass
+
+    def _group_key(self, line):
+        keys = dict(super(Statement, self)._group_key(line))
+        del keys['party']
+        keys['party_payer'] = line.party_payer
+        return tuple([(k, v) for (k, v) in keys.iteritems()])
+
+
+class LineGroup:
+    __name__ = 'account.statement.line.group'
+
+    @classmethod
+    def _grouped_columns(cls, line):
+        return [
+            Max(line.statement).as_('statement'),
+            Max(line.number).as_('number'),
+            Max(line.date).as_('date'),
+            Sum(line.amount).as_('amount'),
+            Max(line.party_payer).as_('party'),
+            ]
