@@ -51,5 +51,23 @@
             <field name="sequence_type" ref="sequence_type_statement"/>
             <field name="group" ref="account_statement.group_statement"/>
         </record>
+        <record model="ir.ui.view" id="statement_line_view_tree_editable">
+            <field name="model">account.statement.line</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="account_statement.statement_line_view_tree_editable"/>
+            <field name="name">statement_line_tree_editable</field>
+        </record>
+        <record model="ir.ui.view" id="statement_line_view_tree">
+            <field name="model">account.statement.line</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="account_statement.statement_line_view_tree"/>
+            <field name="name">statement_line_tree</field>
+        </record>
+        <record model="ir.ui.view" id="statement_line_view_form">
+            <field name="model">account.statement.line</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="account_statement.statement_line_view_form"/>
+            <field name="name">statement_line_form</field>
+        </record>
     </data>
 </tryton>
